hotfix: add @EnableWebFluxSecurity Former-commit-id: 9b185698b19b1c96b7c394acf2fe705233a43a4b